# AeroLap-Dashboard

./: .gitignore  CMakeLists.txt  README.md
bridge/: README.md  demo.py  main.py  requirements.txt
bridge/venv32/: pyvenv.cfg
bridge/venv32/Scripts/: activate  activate.bat
firmware/: .gitignore  CMakeLists.txt  main.cpp  platformio.ini
firmware/esp_core/: CMakeLists.txt  platformio.ini
firmware/esp_core/include/: Pin.h
firmware/esp_core/src/: FlightTelemetry.cpp  main.cpp
firmware/esp_display/: CMakeLists.txt
firmware/include/: BaseHardware.h  FlightHardware.h  FlightTelemetry.h  Pin.h  TelemetryData.h
firmware/old_racing/: RacingTelemetry.cpp  RacingTelemetry.h
firmware/src/: BaseHardware.cpp  FlightHardware.cpp  FlightTelemetry.cpp  main.cpp
